Added requirements files to each directory
