# storage/config/openapi.yaml
@@ -14,101 +14,119 @@ tags:
   description: People or organizations looking to hire new workers
 - name: employees
   description: Individuals who are researching or searching for new career or position
-# paths:
-#   /work/ad_description:
-#     post:
-#       tags:
-#       - employers
-#       summary: adds a work advertisement description
-#       description: Adds a new job advertisement description to the system
-#       # operationId: app.add_advertisement_description
-#       requestBody:
-#         description: Advertisement description item to add
-#         content:
-#           application/json:
-#             schema:
-#               $ref: '#/components/schemas/AdDescription'
-#       responses:
-#         "201":
-#           description: item created
-#         "400":
-#           description: invalid input, object invalid
-#         "409":
-#           description: this ad already exists
-#   /employee/resume:
-#     post:
-#       tags:
-#       - employees
-#       summary: adds an employee resume
-#       description: Adds a new resume in to the system
-#       # operationId: app.emp_resume
-#       requestBody:
-#         description: Employee resume item to add
-#         content:
-#           application/json:
-#             schema:
-#               $ref: '#/components/schemas/Resume'
-#       responses:
-#         "201":
-#           description: item created
-#         "400":
-#           description: invalid input, object invalid
-#         "409":
-#           description: this resume already exists
-# components:
-#   schemas:
-#     AdDescription:
-#       required:
-#       - ad_id
-#       - date_created
-#       - description
-#       - employer
-#       - field
-#       - position
-#       type: object
-#       properties:
-#         ad_id:
-#           type: string
-#           format: uuid
-#           example: d290f1ee-6c54-4b01-90e6-d701748f0851
-#         employer:
-#           type: string
-#           example: Amazon, PostalOffice, Self-Employer
-#         description:
-#           type: string
-#           example: NFT start up company looking for android app and game developers
-#         field:
-#           type: string
-#           example: NFT, Blockchain, IT, Crypto 
-#         position:
-#           type: string
-#           example: Developer, Tester, Backend
-#         date_created:
-#           type: string
-#           format: date-time
-#           example: 2021-10-29T09:12:33.001Z
-#     Resume:
-#       required:
-#       - date_created
-#       - experience
-#       - field
-#       - position
-#       - resume_id
-#       type: object
-#       properties:
-#         resume_id:
-#           type: string
-#           format: uuid
-#           example: d290f1ee-6c54-4b01-90e6-d701748f0851
-#         field:
-#           type: string
-#           example: "NFT, Blockchain, Crypto, IT"
-#         position:
-#           type: string
-#           example: "Developer, Tester, Backend"
-#         experience:
-#           type: integer
-#         date_created:
-#           type: string
-#           format: date-time
-#           example: 2021-10-29T09:12:33.001Z
+paths:
+  /work/ad_description:
+      get:
+        tags:
+        - adds
+        summary: Gets a job advertisement description
+        operationId: app.get_advertisement_description
+        description: Gets a job advertisement description after timestamp
+        parameters:
+          - name: timestamp
+            in: query
+            description: Limits the number of items on a page
+            schema:
+              type: string
+              format: date-time
+              example: "2021-10-29 09:12:33"
+        responses:
+          '200':
+            description: Succesfully returned job advertisement description
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/AdDescription'
+          '400':
+            description: Invalid Request
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
+  /employee/resume:
+    get:
+      tags:
+      - employees
+      summary: gets a new employee resume from 'field'
+      operationId: app.get_emp_resume
+      description: Gets a employee resume from 'field' or 'db'
+      parameters:
+        - name: timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: "2021-10-29 09:12:33"
+      responses:
+        '200':
+          description: Succefully returned employee resume from 'field' or 'db'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Resume'
+
+components:
+  schemas:
+    AdDescription:
+      required:
+      - ad_id
+      - date_created
+      - description
+      - employer
+      - field
+      - position
+      type: object
+      properties:
+        ad_id:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        employer:
+          type: string
+          example: Amazon, PostalOffice, Self-Employer
+        description:
+          type: string
+          example: NFT start up company looking for android app and game developers
+        field:
+          type: string
+          example: NFT, Blockchain, IT, Crypto 
+        position:
+          type: string
+          example: Developer, Tester, Backend
+        date_created:
+          type: string
+          format: date-time
+          example: 2021-10-29T09:12:33.001Z
+    Resume:
+      required:
+      - date_created
+      - experience
+      - field
+      - position
+      - resume_id
+      type: object
+      properties:
+        resume_id:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        field:
+          type: string
+          example: "NFT, Blockchain, Crypto, IT"
+        position:
+          type: string
+          example: "Developer, Tester, Backend"
+        experience:
+          type: integer
+        date_created:
+          type: string
+          format: date-time
+          example: 2021-10-29T09:12:33.001Z
